Made Bookmark app responsive. Fixed bug in weather app where the my location icon was not showing on smaller screen size.

--- a/app/stylesheets/modules/bookmark.scss
+++ b/app/stylesheets/modules/bookmark.scss
@@ -74,3 +74,19 @@
     }
   }
 }
+
+@media screen and (max-width: 800px) {
+  #bookmark-container {
+    #heading {
+      width: 90%;
+    }
+    ul {
+      width: 90%;
+    }
+    #form-container {
+      form {
+        width: 90%;
+      }
+    }
+  }
+}
